--- a/Data_S_and_A_A2.ipynb
+++ b/Data_S_and_A_A2.ipynb
@@ -30,7 +30,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 2: Shortest Path (Dijkstra's) Algorithm"
+    "### Task 2: Shortest Path (Dijkstra's) Algorithm and Graphs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following image is the step through of Dijkstraâs algorithm for the provided graph to go from vertex A to vertex G.\n",
+    "The key is as follows:\n",
+    "- Each vertex that has been visited is added to 'Visited:' with the most recent addition the current vertex.\n",
+    "- The lowest total distance currently for each node is underlined in red beside each node.\n",
+    "- The best path known so far to each node is highlighted in yellow.\n",
+    "- Note for the sake of brevity I did not include any nodes that were at infinity, so any nodes not included in the first 4 images are at infinity."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"dijkstra_by_hand.jpg\">\n"
    ]
   },
   {
