--- a/Data_S_and_A_A2.ipynb
+++ b/Data_S_and_A_A2.ipynb
@@ -15,6 +15,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Imports for this notebook:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as net\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Task 1: Sorting Algorithm Run Time and Complexity"
    ]
   },
@@ -55,11 +73,52 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Discussion of results:\n",
+    "From the image above it is clear that there were many changes for the shortest paths in this weighted graph. This can be easily seen in the change of where the highlighted lines are. G for example had 3 different weights depending on the stage of the algorithm: 29, 26 and 25."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verification of results with code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create an empty weighted graph\n",
+    "G = net.Graph()\n",
+    "\n",
+    "#adding nodes to the graph\n",
+    "G.add_nodes_from(['A', 'B', 'C', 'D', 'E', 'F'])\n",
+    "\n",
+    "#add weighted edges\n",
+    "G.add_edge('A', 'B', weight=5)\n",
+    "G.add_edge('A', 'H', weight=8)\n",
+    "G.add_edge('A', 'E', weight=9)\n",
+    "G.add_edge('B', 'H', weight=4)\n",
+    "G.add_edge('B', 'C', weight=12)\n",
+    "G.add_edge('B', 'D', weight=15)\n",
+    "G.add_edge('C', 'D', weight=3)\n",
+    "G.add_edge('C', 'G', weight=11)\n",
+    "G.add_edge('D', 'G', weight=9)\n",
+    "G.add_edge('C', 'F', weight=1)\n",
+    "G.add_edge('F', 'G', weight=13)\n",
+    "G.add_edge('E', 'F', weight=4)\n",
+    "G.add_edge('E', 'G', weight=20)\n",
+    "G.add_edge('E', 'H', weight=5)\n",
+    "G.add_edge('C', 'H', weight=7)\n",
+    "G.add_edge('H', 'F', weight=6)"
+   ]
   },
   {
    "attachments": {},
@@ -78,8 +137,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "comp30830_t",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
