--- a/Data_S_and_A_A2.ipynb
+++ b/Data_S_and_A_A2.ipynb
@@ -139,6 +139,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dijkstra's algorithm"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
