--- a/Data_S_and_A_A2.ipynb
+++ b/Data_S_and_A_A2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
     "G = net.Graph()\n",
     "\n",
     "#adding nodes to the graph\n",
-    "G.add_nodes_from(['A', 'B', 'C', 'D', 'E', 'F'])\n",
+    "G.add_nodes_from(['A','B','C','D','E','F'])\n",
     "\n",
     "#add weighted edges\n",
     "G.add_edge('A', 'B', weight=5)\n",
@@ -134,7 +134,7 @@
     "\n",
     "#draw the graph\n",
     "pos= {'A': [0, -0.2], 'B': [0.2,  0], 'C': [0.4,-.33], 'D': [0.5, 0], 'E': [0.05, -0.8], 'F': [0.3, -0.6], 'G': [0.5,-0.8], 'H': [ 0.18, -0.4]}\n",
-    "net.draw_networkx(G, pos, with_labels=True, node_color='red', node_size=500)\n",
+    "net.draw_networkx(G, pos, with_labels= True, node_color= 'red', node_size= 500)\n",
     "edge_labels = net.get_edge_attributes(G, 'weight')\n",
     "d=net.draw_networkx_edge_labels(G, pos=pos, edge_labels=edge_labels)\n",
     "#add a title\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,8 @@
     "#create a new graph with only the edges in the shortest path tree\n",
     "S = net.Graph()\n",
     "for node, path in shortest_paths.items():\n",
-    "    for i in range(len(path) - 1):\n",
+    "    for i in range( len(path)-1 ):\n",
+    "        ##add the edge with the weight to the new graph\n",
     "        S.add_edge(path[i], path[i+1], weight=G[path[i]][path[i+1]]['weight'])\n",
     "\n",
     "#draw the shortest path tree, use same positions as original graph\n",
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +348,7 @@
     "G = net.Graph()\n",
     "\n",
     "#adding nodes to the graph\n",
-    "G.add_nodes_from(['1', '2', '3', '4', '5', '6', '7', '8'])\n",
+    "G.add_nodes_from(['1','2','3','4','5','6','7','8'])\n",
     "\n",
     "#add weighted edges\n",
     "G.add_edge('1', '2', weight=240)\n",
@@ -383,7 +384,9 @@
     "pos = net.circular_layout(G)\n",
     "angle = np.deg2rad(-180)\n",
     "#create a matrix to rotate the nodes\n",
-    "rot_matrix = np.array([[np.cos(angle), np.sin(angle)], [-np.sin(angle), np.cos(angle)]])\n",
+    "rot_matrix = np.array([[np.cos(angle), np.sin(angle)],\n",
+    "                        [-np.sin(angle), np.cos(angle)]])\n",
+    "#rotate the nodes using the dot product to find the new positions\n",
     "pos = {node: rot_matrix.dot(pos[node]) for node in G.nodes()}\n",
     "#reverse the order of the nodes\n",
     "new_pos = {}\n",
@@ -410,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
